...
                PetInfoRow(
                  icon: Icons.scale,
                  text: 'Weight: ',
                  subText: '${breed.weight.metric} kg',
                ),
                verticalSpace(8.h),
                Text('Description:', style: AppTextStyles.font18blackBold),
                verticalSpace(8.h),
                Text(breed.description, style: AppTextStyles.font16greyRegular),
                verticalSpace(8.h),
                TemperamentChips(),
              ],
            ),
...
